--- a/app/src/main/res/layout/item_desing.xml
+++ b/app/src/main/res/layout/item_desing.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/cardview_dark_background">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -12,29 +13,49 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardview"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:paddingLeft="20dp"
-            app:cardCornerRadius="120dp">
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="40dp"
+            app:cardCornerRadius="50dp">
 
             <ImageView
                 android:id="@+id/imageview"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#03AEFB"
                 android:scaleType="centerCrop"
-                android:src="@drawable/tiget"/>
+                android:src="@drawable/ic_profile" />
         </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/textview"
-            android:layout_width="230dp"
-            android:layout_height="120dp"
-            android:layout_toRightOf="@id/cardview"
-            android:paddingTop="35sp"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="51dp"
+
+            android:layout_marginTop="31dp"
+            android:layout_marginEnd="-9dp"
+
             android:text="Tiger"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="35dp" />
+            android:textColor="@color/white"
+            android:textSize="22dp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textview"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="226dp"
+            android:text="+917058492414"
+            android:textColor="@color/white"
+            android:textSize="12dp" />
 
 
     </RelativeLayout>
